static/code-examples/network-policies/client.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otterize-tutorial-npol
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace:  otterize-tutorial-npol
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: alpine/curl
          command: [ "/bin/sh", "-c", "--" ]
          args: [ "while true; do timeout 2 curl -si server; sleep 2; done" ]
