static/code-examples/network-policies/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otterize-tutorial-npol
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace:  otterize-tutorial-npol
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace:  otterize-tutorial-npol
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: alpine/curl
          command: [ "/bin/sh", "-c", "--" ]
          args: [ "while true; do timeout 2 curl -si server; sleep 2; done" ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace:  otterize-tutorial-npol
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: hashicorp/http-echo
          args: [ "-listen=:80", "-text=hello world"]
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace:  otterize-tutorial-npol
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
