static/code-examples/network-policies/default-deny-network-policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otterize-tutorial-npol
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace:  otterize-tutorial-npol
spec:
  podSelector: {}
  policyTypes:
    - Ingress
